fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,12 +38,19 @@ h1{
   font-size: 2rem;
 }
 
+h2{
+        margin-top: 25px;
+    margin-bottom: -15px;
+}
+h3{
+    margin-bottom: -15px;
+}
+
 h1 a {
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-bottom: 8px;
   font-family: 'Questrial', sans-serif;
   color: #333;
 }
